external-crates/move/crates/move-compiler/tests/move_2024/naming/standalone_mname.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/naming/standalone_mname.move:3:17
  │
3 │         let m = M; m;
  │                 ^ Expected a type, function, or constant in this position, not an address

